resume.css
body{
	font-family: Book Antiqua, serif;
	font-size: 12px;
}
.page{
	page-break-after: always;
	page-break-inside: avoid;
}

/*'header' info sidebar*/
.header{
	/*this includes name, objective and contact info*/
	display: block;
	width: 100%;
	height: 55px;
	display: table;
	margin-top: 1em;
}
.pageheader{
	display: block;
	width: 100%;
	display: table;
}

.name{
	width: 25%;
	display: table-cell;
	vertical-align: middle;
	/*line-height: 100px;*/
	margin-left:auto;
	margin-right:auto;
	text-align: right;
	font-size: 20px;
	font-family: Tw Cen MT, Trebuchet MS, sans serif;
	font-weight: bold;
	padding-right: 1em;
}

.overviewstmt .title{
	margin: 0.2em;
	font-style: normal;
}
.overviewstmt{
	width: 50%;
	display: table-cell;
	vertical-align: middle;
	text-align: left;
	font-size: 14px;
	font-family: Tw Cen MT, Trebuchet MS, sans serif;
	font-style: italic;
	border-left: 1px dashed #ddd;
	padding: 1em;
}

.pageheader .overviewstmt{
	width: 75%;
}

.contact{
	width: 25%;
	display: table-cell;
	vertical-align: middle;
	border-left: 1px solid black;
	padding-left: 1em;
	width: 150px;
	text-align:left;
	margin-right: 1em;
}


#maincontent{
	float:left;
}

.section .title{
	margin-top: 1.5em;/*decrease to 1em if not enough space*/
	font-family: Tw Cen MT, Trebuchet MS, sans serif;
	text-transform: uppercase;
	font-size: 14px;
	font-weight: bold;
	text-align: left;
}
.section .title:first-letter {
	font-size: 1.2em;
}
.section .title{
	border-bottom:1px solid black;
}
/*.section .title .location{
	display: inline;
	font-style:normal;
	font-size: 10px;
	font-weight: bold;
	padding-left: 1em;
}*/

.position, .location{
	display: inline;
}

.location{
	font-weight: normal;
}
/*
.position{
	font-weight: bold;
}
*/

.position:before, .location:before{/*bullets are lines instead of circles*/
	content: "  -  ";
	}

.title .date{
	float: right;
	font-size: 12px;
	/*font-weight: bold;*/
}

.item .title:first-letter {
	font-size: 1em; /*override from section title*/
}

.item .title{
	border:none;
	margin-top: 0px;
	font-size: 13px;
	font-family: Book Antiqua, serif;
	text-transform: none;
	/*font-weight: normal;*/
	/*font-style: italic;*/
}

.item .title.inline{
	float: left;
	width: 140px;
	text-align: right;
}

ul {
	list-style-type: none;
	padding-inline-start: 2em;
}

ul li:before {
	content: "";
}

.emphasis{
	font-weight: bold;
}

.item{
	margin-bottom: 1em;/*decrease to 0.6 if not enough space*/
	margin-top: 1em;
}
.item.tight{
	margin-bottom: 0;
}

.item p{
	-webkit-margin-before: 0px;
	-webkit-margin-after: 0px;
	text-indent: -2em;
	margin-left: 2em;
}

.tight ul{
	list-style-type: none;
	padding-left: 0px;
	margin-top: 4px;
	margin-bottom: 4px;
}
.tight ul li:before {/*bullets are lines instead of circles*/
	content: " | ";
	/*width:30px;*/
	}

.tight ul li{
	/*min-width: 100px;*/
	/*margin-left: 1em;*/
	display: inline-block;
	white-space: nowrap;
	padding-right: 0.2em;
}

/*~~~~~ peer reviews ~~~~~~*/
.item.quote p {
    text-indent: 0;
    margin: 1em;
    text-justify: inherit;
}

.attribution {
    font-weight: bold;
    text-align: right;
    margin-right: 1em;
}

.item.quote {
    border-left: 1px dashed #ddd;
    border-right: 1px dashed #ddd;
}

.item.quote.ui-sortable {}

/*~~~~~ portfolio section ~~~~~~*/
.portfolio .item{
	/*display: table;*/
	clear:left;
	width: 100%;
	padding-top: 1em;
}
.portfolio img{
	/*display: table-cell;*/
	float:left;
	width: 1.5in;
}
.portfolio .description{
	/*display: table-cell;
	vertical-align: middle;
	text-align: left;*/
	padding-left: 1em;
	overflow:hidden;
}
.portfolio .description .title{
	font-weight: bold;
}
.portfolio .description .title .location{
	font-weight: normal;
}
.portfolio .description .p:before{
	content: "  -  ";
}

